--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,18 @@
 spring.application.name=documentgpt-spring-ai
 
-spring.ai.openai.api-key=${OPENAI_API_KEY}
-spring.ai.openai.chat.options.model=gpt-4o
+# PostgreSQL pgvector configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/documentgpt
+spring.datasource.username=documentgpt
+spring.datasource.password=documentgptpassword
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
 
-#spring.ai.ollama.chat.options.model=mistral
-#spring.ai.ollama.embedding.options.model=nomic-embed-text
-
-spring.ai.vectorstore.chroma.initialize-schema=true
-spring.ai.vectorstore.chroma.collection-name=documentgpt-spring-ai-8
+# Spring AI Vector Store Configuration
+spring.ai.vectorstore.pgvector.initialize-schema=true
+spring.ai.vectorstore.pgvector.remove-existing-vector-store-table=true
+spring.ai.vectorstore.pgvector.table-name=documentgpt_vectors
 
 spring.servlet.multipart.max-file-size=10MB
-
-debug=true
-
+spring.ai.openai.embedding.enabled=false
+spring.ai.ollama.embedding.enabled=false
+spring.ai.openai.api-key=test
