--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=documentgpt-spring-ai
-
+spring.profiles.active=ollama
 # PostgreSQL pgvector configuration
 spring.datasource.url=jdbc:postgresql://localhost:5432/documentgpt
 spring.datasource.username=documentgpt
