Gemini CLI comments

--- a/src/main/resources/application-openai.properties
+++ b/src/main/resources/application-openai.properties
@@ -2,7 +2,7 @@
 
 spring.ai.openai.embedding.enabled=true
 
-spring.ai.openai.api-key=${OPENAI_API_KEY}
+spring.ai.openai.api-key=
 spring.ai.openai.chat.options.model=gpt-4o
 
 spring.docker.compose.file=compose.yaml
