--- a/compose-ollama.yaml
+++ b/compose-ollama.yaml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   postgres:
     image: ankane/pgvector:latest # Prebuilt PostgreSQL image with pgvector
@@ -24,8 +22,35 @@ services:
     ports:
       - "11434:11434"
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+    - ./docker/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+    - "3000:3000"
+
+    volumes:
+      - grafana-storage:/var/lib/grafana
+      - ./docker/grafana/provisioning:/etc/grafana/provisioning
+      - ./docker/grafana/dashboards:/etc/grafana/dashboards
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH=/etc/grafana/dashboards/ai-metrics-dashboard.json
+    depends_on:
+      - prometheus
+
 volumes:
   pgvector-data:
     driver: local
   ollama-data:
+    driver: local
+  grafana-storage:
     driver: local
